功夫中国首页和初始的直播页面

--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -37,6 +37,10 @@ p{ margin: 0; }
 .t_c{ text-align: center; }
 .t_l{ text-align: left; }
 .d_ib{ display: inline-block; }
+.f_l{ float: left; }
+.f_r{ float: right; }
+.f_n{ float: none; }
+.c_p{ cursor: pointer; }
 .one_row_text{
     overflow: hidden; /* 超出一行文字自动隐藏 */
     text-overflow: ellipsis;/* 文字隐藏后添加省略号 */
