--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -62,5 +62,10 @@ p{ margin: 0; }
         content: "头像";
     }
 }
-
+.my_row:before, .my_row:after{
+    display: table; content: "";
+}
+.my_row:after{
+    clear: both;
+}
 /*** 公共样式 ***/
